# DPHPC_2018

./: .gitignore  .travis.yml  .travis.yml.swp  CMakeLists.txt  README.md  presentation.blg
code/: .gitignore  7  CMakeLists.txt  clean.sh  cmake_install.cmake  cmake_install_BACKUP_26521.cmake  cmake_install_BASE_26521.cmake  cmake_install_REMOTE_26521.cmake  kruskal.sh  submit.sh  test.sh
code/backup/: algorithms.hpp.bak  main.cpp.bkp
code/clusters/: ER_EXP.sh  ER_EXP1.sh  ER_EXP2.sh  EXPS_Krusk.sh  PA_EXP.sh  PA_EXP1.sh  USA_BAY_EXP.sh  USA_CAL_EXP.sh  USA_EXP.sh  USA_NW_EXP.sh  USA_NY_EXP.sh  dco_submit.sh  euler_submit.sh  eulercompile.sh  exp1.1.sh  exp1.2.sh  exp2.1.sh  exp2.2.sh  exp3.1.sh  exp3.2.sh  exp4.sh  exp5.sh  exp6.1.sh  exp6.2.sh  exp7.sh  load_modules.sh
code/euler/: gcc7_install.sh  submit.sh
code/include/: algorithms.hpp  algorithms.hpp.bak  common.hpp  experiments.hpp  filter_kruskal.hpp  graph.hpp  kruskal.hpp  kruskal.hpp.bak  lsb_timer.hpp  parallel_sollin.hpp  parser.hpp  prim.hpp  sollin.hpp  timer.hpp  verifier.hpp
code/include/algorithms/: boost_boruvka_mixed_merge.hpp  boost_boruvka_then_merge.hpp  boost_dense_boruvka.hpp  boost_kruskal.hpp  boost_merge_local.hpp  boost_prim.hpp  boost_wrapper.hpp  filter_kruskal.hpp  filter_sollin.hpp  kruskal.hpp  parallel_sollin.hpp  prim.hpp  sollin.hpp
code/plots/: Interpretation.ipynb  log_varSize_edgePerVertex=20.txt  plot.py  plot_sollin.py  sollin.txt
code/plots/backup/data/: sollin.txt
code/plots/data/: log_edgePerVertex=20.txt
code/src/: algorithms.cpp  algorithms.cpp.bak  common.cpp  experiments.cpp  filter_kruskal.cpp  graph.cpp  kruskal.cpp  kruskal.cpp.bak  lsb_timer.cpp  main.cpp  parallel_sollin.cpp  parser.cpp  prim.cpp  sollin.cpp  timer.cpp  verifier.cpp
code/src/algorithms/: boost_boruvka_mixed_merge.cpp  boost_boruvka_then_merge.cpp  boost_dense_boruvka.cpp  boost_kruskal.cpp  boost_merge_local.cpp  boost_prim.cpp  boost_wrapper.cpp  filter_kruskal.cpp  filter_sollin.cpp  kruskal.cpp  parallel_sollin.cpp  prim.cpp  sollin.cpp
data/: plot.py
data/clone/: dispatch.sh
data/clone_2/: lsb.ParallelSollinAL_old_timing_USA_BAY.r5  lsb.ParallelSollinAL_old_timing_USA_BAY.r5-10  lsb.ParallelSollinAL_old_timing_USA_BAY.r5-15  lsb.ParallelSollinAL_old_timing_USA_BAY.r5-17  lsb.ParallelSollinAL_old_timing_USA_BAY.r5-18  lsb.ParallelSollinAL_old_timing_USA_BAY.r5-19  lsb.ParallelSollinAL_old_timing_USA_BAY.r5-5  lsb.ParallelSollinAL_old_timing_USA_BAY.r5-6  lsb.ParallelSollinAL_old_timing_USA_BAY.r5-8  lsb.ParallelSollinAL_old_timing_USA_CAL.r5-1  lsb.ParallelSollinAL_old_timing_USA_CAL.r5-10  lsb.ParallelSollinAL_old_timing_USA_CAL.r5-11  lsb.ParallelSollinAL_old_timing_USA_CAL.r5-12  lsb.ParallelSollinAL_old_timing_USA_CAL.r5-13  lsb.ParallelSollinAL_old_timing_USA_CAL.r5-14  lsb.ParallelSollinAL_old_timing_USA_CAL.r5-16  lsb.ParallelSollinAL_old_timing_USA_CAL.r5-4  lsb.ParallelSollinAL_old_timing_USA_CAL.r5-5  lsb.ParallelSollinAL_old_timing_USA_CAL.r5-6  lsb.ParallelSollinAL_old_timing_USA_CAL.r5-7  lsb.ParallelSollinAL_old_timing_USA_NW.r5-1  lsb.ParallelSollinAL_old_timing_USA_NW.r5-11  lsb.ParallelSollinAL_old_timing_USA_NW.r5-13  lsb.ParallelSollinAL_old_timing_USA_NW.r5-14  lsb.ParallelSollinAL_old_timing_USA_NW.r5-17  lsb.ParallelSollinAL_old_timing_USA_NW.r5-18  lsb.ParallelSollinAL_old_timing_USA_NW.r5-19  lsb.ParallelSollinAL_old_timing_USA_NW.r5-2  lsb.ParallelSollinAL_old_timing_USA_NW.r5-3  lsb.ParallelSollinAL_old_timing_USA_NW.r5-6  lsb.ParallelSollinAL_old_timing_USA_NW.r5-8  lsb.ParallelSollinAL_old_timing_USA_NY.r5-17  lsb.ParallelSollinAL_old_timing_USA_NY.r5-18  lsb.ParallelSollinEL_old_timing_USA_BAY.r5-10  lsb.ParallelSollinEL_old_timing_USA_BAY.r5-11  lsb.ParallelSollinEL_old_timing_USA_BAY.r5-12  lsb.ParallelSollinEL_old_timing_USA_BAY.r5-14  lsb.ParallelSollinEL_old_timing_USA_BAY.r5-16  lsb.ParallelSollinEL_old_timing_USA_BAY.r5-17  lsb.ParallelSollinEL_old_timing_USA_BAY.r5-19  (+44 more)
interpret/: InterpretationPython-ReportVersion.ipynb  InterpretationPython.ipynb  InterpretationPython.old.ipynb  data.csv  lib.py  table.py  table.txt
interpret/cambiert/: lsb.BoostKruskal_timing_ER100000.r0  lsb.BoostKruskal_timing_USA_COL.r0  lsb.BoostKruskal_timing_USA_NY.r0  lsb.FilterKruskal_timing_ER10000.r0  lsb.FilterKruskal_timing_USA_COL.r0  lsb.FilterKruskal_timing_USA_NY.r0  lsb.FilterSollin_timing_USA_COL.r0  lsb.FilterSollin_timing_USA_NY.r0  lsb.Kruskal_timing_ER10000.r0  lsb.Kruskal_timing_USA_COL.r0  lsb.Kruskal_timing_USA_NY.r0  lsb.ParallelSollinEL_timing_ER10000.r0  lsb.ParallelSollinEL_timing_USA_COL.r0
interpret/dangnhur/: lsb.BoostKruskal_timing_USA_COL.r0  lsb.BoostKruskal_timing_USA_NY.r0  (+8 more)
presentation/: Presentation.aux  Presentation.bbl  Presentation.bcf  Presentation.blg  Presentation.nav  Presentation.out  Presentation.tex  Presentation.tex.blg  Presentation.toc  Presentation.vrb  bib.bib  bib.bib.blg
report/: README.md  bibl_conf.bib  compile.sh  report.aux  report.bbl  report.blg  report.tex
src/: algorithms.cpp  graph.cpp  main.cpp
(+14276 files in other folders)
